allows panning on mobile with 2F swipe ; fixes issue with pinch tracking

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 #p5-container{
-  border: 1px dashed red !important;
+  border: 1px dashed purple !important;
   height: fit-content !important;
   width: fit-content !important;
 
@@ -21,6 +21,8 @@
   padding: 0 !important;
   margin: 0 !important;
   display: flex !important;
+
+  touch-action: none;
 }
 .App {
 
